Full codebase update

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,11 +13,27 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&family=Manrope:wght@400;700;800&family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inter:400,500,600,700,800,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&family=Sora:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Rubik+Mono+One&family=Titan+One&display=swap" rel="stylesheet">
     <title>Aurameter - Your Energy, Your Aura</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <style>
+      .landing-page {
+        font-family: 'Inter', 'Manrope', 'Space Grotesk', 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, system-ui, sans-serif !important;
+      }
+      .landing-page h1,
+      .landing-page h2,
+      .landing-page h3 {
+        font-family: inherit !important;
+        font-weight: 800 !important;
+        letter-spacing: -0.01em;
+        text-transform: none;
+      }
+    </style>
   </body>
 </html> 
